# autogen-podcast

./: .env  pyproject.toml
.cache/41/: cache.db
.cache/42/: cache.db
autogen_podcast/: main.py
autogen_podcast/agents/: configs.py  inits.py  prompts.py
autogen_podcast/modules/: api_costs.py  llm.py  log.py  orchestrator.py  tts.py
del/full_scripts/: the_doobie_brothers_script.txt  zac_brown_band_script.txt
del/output/audio/: audio_sequence.txt
full_scripts/: blaze_foley_script.txt  fleetwood_mac_script.txt  the_beatles_script.txt  the_doobie_brothers_script.txt
output/: outline  script_0  script_1  script_2  script_3  script_4  script_5
output/Pink Floyd/audio/raw/: part_1.flac  part_10.flac  part_2.flac  part_4.flac  part_5.flac  part_6.flac  part_7.flac  part_8.flac  part_9.flac
output/Pink Floyd/audio/with_bgm/: part_1.flac  part_10.flac  part_6.flac
output/Pink Floyd/scripts/: audio_sequence.txt  outline.txt  pink_floyd_script.txt  tracklist.txt
output/Pink Floyd/scripts/script_parts/: script_0
output/The Rolling Stones/audio/raw/: part_1.flac  part_10.flac  part_11.flac  part_12.flac  part_13.flac  part_14.flac  part_2.flac  part_3.flac  part_4.flac  part_5.flac  part_6.flac  part_7.flac  part_8.flac  part_9.flac
output/The Rolling Stones/audio/with_bgm/: part_1.flac  part_14.flac  part_7.flac  (+1 more)
output/The Rolling Stones/scripts/: audio_sequence.txt  outline.txt  the_rolling_stones_script.txt  tracklist.txt
output/audio/: audio_sequence.txt
temp_output/: outline  script_0  script_1  script_2  script_3  script_4  tracklist.txt
(+7 files in other folders)
