[tool.poetry]
name = "autogen-podcast"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pyautogen = "0.2.0"
python-dotenv = "^1.0.0"
argparse = "^1.4.0"
openai = "^1.1.2"
tiktoken = "^0.5.1"
nltk = "^3.8.1"
pyht = "^0.0.16"
pydub = "^0.25.1"
ffmpeg = "^1.4"
spotipy = "^2.23.0"
diskcache = "^5.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "autogen_podcast.main:main"
tts = "autogen_podcast.modules.tts:main"

